docs: use correct format for JACKETT_INDEXERS in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -107,7 +107,7 @@ MEDIAFUSION_API_PASSWORD=
 # ----------- JACKETTIO -------------
 JACKETTIO_URL=https://jackettio.elfhosted.com/
 # The default indexers used when auto generating the configuration. Change if using a custom Jackettio instance, and you have different indexers 
-JACKETT_INDEXERS=['bitsearch', 'eztv', 'thepiratebay', 'therarbg', 'yts']
+JACKETT_INDEXERS=["bitsearch", "eztv", "thepiratebay", "therarbg", "yts"]
 DEFAULT_JACKETTIO_TIMEOUT=
 # -------------------------------------
 
