--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,15 +25,17 @@ jobs:
         run: |
           COMMIT_MSG="${{ env.message }}";
           if echo "$COMMIT_MSG" | grep -q "#release-major"; then
-            echo "bump_type=major" >> $GITHUB_OUTPUT
+            echo "bump_type=major" >> "$GITHUB_OUTPUT"
           elif echo "$COMMIT_MSG" | grep -q "#release-minor"; then
-            echo "bump_type=minor" >> $GITHUB_OUTPUT
+            echo "bump_type=minor" >> "$GITHUB_OUTPUT"
           elif echo "$COMMIT_MSG" | grep -q "#release-patch"; then
-            echo "bump_type=patch" >> $GITHUB_OUTPUT
+            echo "bump_type=patch" >> "$GITHUB_OUTPUT"
           elif echo "$COMMIT_MSG" | grep -q "#release"; then
-            echo "bump_type=patch" >> $GITHUB_OUTPUT
+            echo "bump_type=patch" >> "$GITHUB_OUTPUT"
           else
-            echo "bump_type=none" >> $GITHUB_OUTPUT
+            echo "bump_type=none" >> "$GITHUB_OUTPUT"
+          fi
+        shell: bash
 
   bump_version:
     needs: check_commit
