--- a/.env.sample
+++ b/.env.sample
@@ -71,6 +71,9 @@ MEDIAFLOW_IP_TIMEOUT=30000
 DEFAULT_MEDIAFLOW_URL=
 DEFAULT_MEDIAFLOW_API_PASSWORD=
 DEFAULT_MEDIAFLOW_PUBLIC_IP=
+# Whether to encrypt each mediaflow URL. This requires AIOStreams to make a request to the MediaFlow API for each URL.
+# This can potentially improve compatability with some external players, but can cause a longer delay when fetching streams. 
+ENCRYPT_MEDIAFLOW_URLS=false
 # ==============================================================================
 
 
