docs: update sample .env for jackettio and easynews++

--- a/.env.sample
+++ b/.env.sample
@@ -110,8 +110,12 @@ MEDIAFUSION_API_PASSWORD=
 # ----------- JACKETTIO -------------
 JACKETTIO_URL=https://jackettio.elfhosted.com/
 # The default indexers used when auto generating the configuration. Change if using a custom Jackettio instance, and you have different indexers 
-JACKETT_INDEXERS=["bitsearch", "eztv", "thepiratebay", "therarbg", "yts"]
+DEFAULT_JACKETTIO_INDEXERS=["bitsearch", "eztv", "thepiratebay", "therarbg", "yts"]
 DEFAULT_JACKETTIO_TIMEOUT=
+# The default URL used for the stremthru instance. 
+DEFAULT_JACKETTIO_STREMTHRU_URL=https://stremthru.13377001.xyz
+# You may also provide a selfhosted instance of StremThru here.
+# DEFAULT_JACKETTIO_STREMTHRU_URL=http://stremthru:8080
 # -------------------------------------
 
 # ---------- STREMIO-JACKETT ----------
@@ -127,6 +131,11 @@ DEFAULT_STREMIO_JACKETT_TIMEOUT=
 # --------- EASYNEWS+ ADDON ---------
 EASYNEWS_PLUS_URL=https://b89262c192b0-stremio-easynews-addon.baby-beamup.club/
 DEFAULT_EASYNEWS_PLUS_TIMEOUT=
+# -------------------------------------
+
+# -------- EASYNEWS++ ADDON ---------
+EASYNEWS_PLUS_PLUS_URL=https://easynews-cloudflare-worker.jqrw92fchz.workers.dev/
+DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT=
 # -------------------------------------
 
 # ----------- TORRENTIO -------------
