docs: update Stremio Jackett configuration in sample .env

--- a/.env.sample
+++ b/.env.sample
@@ -121,10 +121,10 @@ DEFAULT_JACKETTIO_STREMTHRU_URL=https://stremthru.13377001.xyz
 # ---------- STREMIO-JACKETT ----------
 STREMIO_JACKETT_URL=https://stremio-jackett.elfhosted.com/
 # If using a self hosted instance, provide the Jackett URL and API key here
-JACKETT_URL=
-JACKETT_API_KEY=
-# Whether to enable the cache option for auto configurations
-STREMIO_JACKETT_CACHE_ENABLED=true
+DEFAULT_STREMIO_JACKETT_JACKETT_URL=
+DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY=
+# The default API key used in Stremio Jackett configurations.
+# DEFAULT_STREMIO_JACKETT_TMDB_API_KEY=
 DEFAULT_STREMIO_JACKETT_TIMEOUT=
 # -------------------------------------
 
