docs: comment out FORCE_COMET env vars in sample .env and add more documentation

--- a/.env.sample
+++ b/.env.sample
@@ -92,9 +92,17 @@ DEFAULT_COMET_TIMOUT=
 # The following environment variables should only be set if you are using an internal URL for 'COMET_URL' e.g. http://comet:3000/
 # and want the comet streams to be accessible from outside the network
 # i.e. you would set these to the public URL of the comet instance
-FORCE_COMET_HOSTNAME=
-FORCE_COMET_PORT=
-FORCE_COMET_PROTOCOL=
+# Do not uncomment these if you don't want to use them, as these accept empty strings and your comet streams will NOT work 
+
+# Example scenarios: 
+# 1. Your COMET_URL is an internal URL (e.g. http://comet:3000), you would need to set FORCE_COMET_HOSTNAME to your publicly accessible host, set FORCE_COMET_PROTOCOL as needed
+#    and make sure to set FORCE_COMET_PROTOCOL to an empty value
+# 2. Same as scenario 1, but you are using mediaflow proxy on the same docker network. In this case, it is better for MediaFlow proxy to use the internal URL so leave these
+#    commented out. 
+# 3. You set COMET_URL to a publicly accessible URL. No further actions are required. 
+# FORCE_COMET_HOSTNAME=
+# FORCE_COMET_PORT=
+# FORCE_COMET_PROTOCOL=
 # -------------------------------------
 
 # ----------- MEDIAFUSION ------------
@@ -124,7 +132,7 @@ STREMIO_JACKETT_URL=https://stremio-jackett.elfhosted.com/
 DEFAULT_STREMIO_JACKETT_JACKETT_URL=
 DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY=
 # The default API key used in Stremio Jackett configurations.
-# DEFAULT_STREMIO_JACKETT_TMDB_API_KEY=
+# DEFAULT_STREMIO_JACKETT_TMDB_API_KEY= 
 DEFAULT_STREMIO_JACKETT_TIMEOUT=
 # -------------------------------------
 
