feat: Enhance Regex-based Stream Sorting with Multiple Pattern Support (#157)

--- a/.env.sample
+++ b/.env.sample
@@ -52,6 +52,8 @@ ADDON_PROXY_CONFIG=
 MAX_ADDONS=15
 # The maximum number of keyword filters that can be used in a single instance of the addon
 MAX_KEYWORD_FILTERS=30
+# The maximum number of regexes that can be used for sorting in a single instance of the addon
+MAX_REGEX_SORT_PATTERNS=
 # To control the maximum size the size filter sliders can go up to in bytes
 MAX_MOVIE_SIZE=161061273600
 MAX_EPISODE_SIZE=161061273600
