docs: update sample .env and README for StremThru proxy integration

--- a/.env.sample
+++ b/.env.sample
@@ -73,11 +73,25 @@ MEDIAFLOW_IP_TIMEOUT=30000
 DEFAULT_MEDIAFLOW_URL=
 DEFAULT_MEDIAFLOW_API_PASSWORD=
 DEFAULT_MEDIAFLOW_PUBLIC_IP=
-# Whether to encrypt each mediaflow URL. This requires AIOStreams to make a request to the MediaFlow API for each URL.
-# This can potentially improve compatability with some external players, but can cause a longer delay when fetching streams. 
+# Whether to encrypt each mediaflow URL. Improves compatability with external players.
 ENCRYPT_MEDIAFLOW_URLS=false
 # ==============================================================================
 
+
+# ==============================================================================
+#                        STREMTHRU (PROXY) CONFIGURATION
+# ==============================================================================
+# The timeout for requests to the StremThru instance
+STREMTHRU_TIMEOUT=30000
+# If you set a default stremthru configuration, it will force the addon to use StremThru for all instances
+# A user can override the stremthru instance to use a different one
+DEFAULT_STREMTHRU_URL=
+# The default credential used (either plain-text or base64 encoded of a username:password pair)
+DEFAULT_STREMTHRU_CREDENTIAL=
+# Whether to optionally use a default public IP for the stremthru instance
+DEFAULT_STREMTHRU_PUBLIC_IP=
+# Whether to encrypt each StremThru proxy URL. 
+ENCRYPT_STREMTHRU_URLS=false
 
 # ==============================================================================
 #                         ADDON CONSTANTS
