feat: Support regex patterns via environment variables to prevent HTTP 431 errors (#162)

--- a/.env.sample
+++ b/.env.sample
@@ -53,7 +53,7 @@ MAX_ADDONS=15
 # The maximum number of keyword filters that can be used in a single instance of the addon
 MAX_KEYWORD_FILTERS=30
 # The maximum number of regexes that can be used for sorting in a single instance of the addon
-MAX_REGEX_SORT_PATTERNS=
+MAX_REGEX_SORT_PATTERNS=30
 # To control the maximum size the size filter sliders can go up to in bytes
 MAX_MOVIE_SIZE=161061273600
 MAX_EPISODE_SIZE=161061273600
@@ -96,6 +96,16 @@ ENCRYPT_STREMTHRU_URLS=true
 # ==============================================================================
 #                         ADDON CONSTANTS
 # ==============================================================================
+
+# Default regex patterns for filtering and sorting
+# These are used as defaults, and can be overridden in the addon configuration page
+# Example Exclude Pattern: `/b(0neshot)\b` will exclude streams with the word "0neshot" in them
+DEFAULT_REGEX_EXCLUDE_PATTERN=
+# Example Include Pattern: `/b(3L)\b` will include only streams with the word "3L" in them
+DEFAULT_REGEX_INCLUDE_PATTERN=
+# Example Sort Patterns: `/b(3L|BiZKiT)\b \b(FraMeSToR)\b \b(TRiToN)\b` will sort streams with the word "3L" or "BiZKiT" in them, followed by "FraMeSToR", followed by "TRiToN"
+DEFAULT_REGEX_SORT_PATTERNS=
+
 # The default timeout for all requests. If other timeouts are not set, this will be used
 DEFAULT_TIMEOUT=15000
 
