--- a/.env.sample
+++ b/.env.sample
@@ -35,14 +35,14 @@ LOG_SENSITIVE_INFO=true
 # is blocked by Torrentio. 
 # e.g. http://warp:1080
 # from https://github.com/cmj2002/warp-docker
-ADDON_PROXY=
+# ADDON_PROXY=
 # Optionally, configure what domains to proxy
 # Use a comma separated list of rules in the format string:boolean. 
 # The later in the list, the higher the priority.
 # You can use wildcards (*) to match multiple domains
 # e.g. ADDON_PROXY_CONFIG="*:false,*.strem.fun:true"
 # This would only proxy requests to the strem.fun domain and any subdomains of it
-ADDON_PROXY_CONFIG=
+# ADDON_PROXY_CONFIG=
 
 
 # ==============================================================================
@@ -70,9 +70,9 @@ MIN_TIMEOUT=1000
 MEDIAFLOW_IP_TIMEOUT=30000
 # If you set a default mediaflow configuration, it will force the addon to use MediaFlow for all instances
 # A user can override the mediaflow instance to use a different one
-DEFAULT_MEDIAFLOW_URL=
-DEFAULT_MEDIAFLOW_API_PASSWORD=
-DEFAULT_MEDIAFLOW_PUBLIC_IP=
+# DEFAULT_MEDIAFLOW_URL=
+# DEFAULT_MEDIAFLOW_API_PASSWORD=
+# DEFAULT_MEDIAFLOW_PUBLIC_IP=
 # Whether to encrypt each mediaflow URL. Improves compatability with external players.
 ENCRYPT_MEDIAFLOW_URLS=true
 # ==============================================================================
@@ -85,11 +85,11 @@ ENCRYPT_MEDIAFLOW_URLS=true
 STREMTHRU_TIMEOUT=30000
 # If you set a default stremthru configuration, it will force the addon to use StremThru for all instances
 # A user can override the stremthru instance to use a different one
-DEFAULT_STREMTHRU_URL=
+# DEFAULT_STREMTHRU_URL=
 # The default credential used (either plain-text or base64 encoded of a username:password pair)
-DEFAULT_STREMTHRU_CREDENTIAL=
+# DEFAULT_STREMTHRU_CREDENTIAL=
 # Whether to optionally use a default public IP for the stremthru instance
-DEFAULT_STREMTHRU_PUBLIC_IP=
+# DEFAULT_STREMTHRU_PUBLIC_IP=
 # Whether to encrypt each StremThru proxy URL. 
 ENCRYPT_STREMTHRU_URLS=true
 
@@ -114,7 +114,7 @@ DEFAULT_TIMEOUT=15000
 # ----------- COMET ------------
 COMET_URL=https://comet.elfhosted.com/
 # The default timeout for all requests to the Comet API. If left empty, either the DEFAULT_TIMEOUT or the overriden timeout will be used
-DEFAULT_COMET_TIMOUT=
+# DEFAULT_COMET_TIMOUT=
 # The following environment variables should only be set if you are using an internal URL for 'COMET_URL' e.g. http://comet:3000/
 # and want the comet streams to be accessible from outside the network
 # i.e. you would set these to the public URL of the comet instance
@@ -133,19 +133,19 @@ DEFAULT_COMET_TIMOUT=
 
 # ----------- MEDIAFUSION ------------
 MEDIAFUSION_URL=https://mediafusion.elfhosted.com/
-DEFAULT_MEDIAFUSION_TIMEOUT=
+# DEFAULT_MEDIAFUSION_TIMEOUT=
 # The timeout applied to the /encrypt-user-data endpoint of MediaFusion when auto generating the configuration
 MEDIAFUSION_CONFIG_TIMEOUT=5000
 # If you are using a self hosted instance of MediaFusion protected with a 'API_PASSWORD', you must provide it here
 # If you want to be able to make use of the auto configuration. If you are planning on overriding the URL at the config page, you can leave this empty
-MEDIAFUSION_API_PASSWORD=
+# MEDIAFUSION_API_PASSWORD=
 # ------------------------------------- 
 
 # ----------- JACKETTIO -------------
 JACKETTIO_URL=https://jackettio.elfhosted.com/
 # The default indexers used when auto generating the configuration. Change if using a custom Jackettio instance, and you have different indexers 
 DEFAULT_JACKETTIO_INDEXERS=["bitsearch", "eztv", "thepiratebay", "therarbg", "yts"]
-DEFAULT_JACKETTIO_TIMEOUT=
+# DEFAULT_JACKETTIO_TIMEOUT=
 # The default URL used for the stremthru instance. 
 DEFAULT_JACKETTIO_STREMTHRU_URL=https://stremthru.13377001.xyz
 # You may also provide a selfhosted instance of StremThru here.
@@ -160,64 +160,64 @@ DEFAULT_JACKETTIO_STREMTHRU_URL=https://stremthru.13377001.xyz
 # ---------- STREMIO-JACKETT ----------
 STREMIO_JACKETT_URL=https://stremio-jackett.elfhosted.com/
 # If using a self hosted instance, provide the Jackett URL and API key here
-DEFAULT_STREMIO_JACKETT_JACKETT_URL=
-DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY=
+# DEFAULT_STREMIO_JACKETT_JACKETT_URL=
+# DEFAULT_STREMIO_JACKETT_JACKETT_API_KEY=
 # The default API key used in Stremio Jackett configurations.
 # DEFAULT_STREMIO_JACKETT_TMDB_API_KEY= 
-DEFAULT_STREMIO_JACKETT_TIMEOUT=
+# DEFAULT_STREMIO_JACKETT_TIMEOUT=
 # -------------------------------------
 
 
 # --------- STREMTHRU-STORE ---------
 STREMTHRU_STORE_URL=https://stremthru.elfhosted.com/stremio/store/
-DEFAULT_STREMTHRU_STORE_TIMEOUT=
+# DEFAULT_STREMTHRU_STORE_TIMEOUT=
 # --------------------------------------
 
 # --------- EASYNEWS+ ADDON ---------
 EASYNEWS_PLUS_URL=https://b89262c192b0-stremio-easynews-addon.baby-beamup.club/
-DEFAULT_EASYNEWS_PLUS_TIMEOUT=
+# DEFAULT_EASYNEWS_PLUS_TIMEOUT=
 # -------------------------------------
 
 # -------- EASYNEWS++ ADDON ---------
 EASYNEWS_PLUS_PLUS_URL=https://easynews-cloudflare-worker.jqrw92fchz.workers.dev/
-DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT=
+# DEFAULT_EASYNEWS_PLUS_PLUS_TIMEOUT=
 # -------------------------------------
 
 # ----------- TORRENTIO -------------
 TORRENTIO_URL=https://torrentio.strem.fun/
-DEFAULT_TORRENTIO_TIMEOUT=
+# DEFAULT_TORRENTIO_TIMEOUT=
 # -------------------------------------
 
 # -------- ORION STREMIO ADDON --------
 ORION_STREMIO_ADDON_URL=https://5a0d1888fa64-orion.baby-beamup.club/
-DEFAULT_ORION_STREMIO_ADDON_TIMEOUT=
+# DEFAULT_ORION_STREMIO_ADDON_TIMEOUT=
 # -------------------------------------
 
 # ------------ PEERFLIX --------------
 PEERFLIX_URL=https://peerflix-addon.onrender.com/
-DEFAULT_PEERFLIX_TIMEOUT=
+# DEFAULT_PEERFLIX_TIMEOUT=
 # -------------------------------------
 
 # -------- TORBOX STREMIO ADDON --------
 TORBOX_STREMIO_URL=https://stremio.torbox.app/
-DEFAULT_TORBOX_STREMIO_TIMEOUT=
+# DEFAULT_TORBOX_STREMIO_TIMEOUT=
 # --------------------------------------
 
 # -------- EASYNEWS ADDON --------
 EASYNEWS_URL=https://ea627ddf0ee7-easynews.baby-beamup.club/
-DEFAULT_EASYNEWS_TIMEOUT=
+# DEFAULT_EASYNEWS_TIMEOUT=
 # --------------------------------------
 
 # ------------ DEBRIDIO -----------
 DEBRIDIO_URL=https://debridio.adobotec.com/
-DEFAULT_DEBRIDIO_TIMEOUT=
+# DEFAULT_DEBRIDIO_TIMEOUT=
 # --------------------------------------
 
 # ------------- DMM Cast ----------------
-DEFAULT_DMM_CAST_TIMEOUT=
+# DEFAULT_DMM_CAST_TIMEOUT=
 # --------------------------------------
 
 # -------------- STREMIO GDRIVE ----------------
-DEFAULT_STREMIO_GDRIVE_TIMEOUT=
+# DEFAULT_STREMIO_GDRIVE_TIMEOUT=
 # --------------------------------------
 # ==============================================================================
