--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Release
         id: release
         uses: google-github-actions/release-please-action@v4
-        # with:
-        #   token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger Docker Image Publish
         if: ${{ steps.release.outputs['release_created'] }}
