ci: remove nightly build text in release title

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           gh release create "${{ steps.gen_tag.outputs.tag_name }}" \
             --repo "${GITHUB_REPOSITORY}" \
-            --title "Nightly Build ${{ steps.gen_tag.outputs.tag_name }}" \
+            --title "${{ steps.gen_tag.outputs.tag_name }}" \
             --notes "${{ steps.commit_msg.outputs.commit_msg }}" \
             --prerelease
 
