--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -3,6 +3,13 @@ name: Nightly Builds
 on:
   push:
     branches: [main]
+    paths:
+      - 'packages/**'
+      - 'package-lock.json'
+      - 'package.json'
+      - 'tsconfig.json'
+      - 'tsconfig.base.json'
+      - 'Dockerfile'
 
 jobs:
   release:
