chore: update dockerfiles, compose.yaml and dont use prebuild

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npm run test --workspaces",
     "release": "commit-and-tag-version",
     "format": "prettier --write .",
-    "prebuild": "node scripts/generateMetadata.js",
+    "metadata": "node scripts/generateMetadata.js",
     "build": "npm -w packages/core run build && npm -w packages/server run build && npm -w packages/frontend run build",
     "build:watch": "tsc --build --watch",
     "start": "node packages/server/dist/server",
