feat: ui improvments

--- a/.env.sample
+++ b/.env.sample
@@ -216,8 +216,8 @@ LOG_SENSITIVE_INFO=true
 # 'DEFAULT_' values are pre-filled. 'FORCE_' values override user settings.
 
 # --- Stream Proxy Enabled ---
-DEFAULT_PROXY_ENABLED=true  # Default state for enabling a stream proxy.
-FORCE_PROXY_ENABLED=false   # Force stream proxy on/off for all users.
+# DEFAULT_PROXY_ENABLED=true  # Default state for enabling a stream proxy.
+# FORCE_PROXY_ENABLED=false   # Force stream proxy on/off for all users.
 
 # --- Stream Proxy ID ---
 # 'mediaflow' or 'stremthru'
