docs: add default TMDB access token to .env.sample for Title Matching filter

--- a/.env.sample
+++ b/.env.sample
@@ -50,6 +50,10 @@ DATABASE_URI=sqlite://./data/db.sqlite
 # ==============================================================================
 #                     DEBRID & OTHER SERVICE API KEYS
 # ==============================================================================
+
+# Provide a default TMDB access token to be used for the Title Matching filter if a user does not provide any.
+TMDB_ACCESS_TOKEN=
+
 # Configure API keys for debrid services and others you plan to use.
 # 'DEFAULT_' values are pre-filled in the user's config page.
 # 'FORCED_' values override user settings and hide the option.
