docs: add clarification comments for static rate limit configuration in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -288,9 +288,11 @@ MIN_TIMEOUT=1000
 # Default: false
 DISABLE_RATE_LIMITS=false
 
+# Window and Max requests refer to the maximum number of requests a user can make within a specific timeframe
+
 # --- Static File Serving ---
-STATIC_RATE_LIMIT_WINDOW=5       # Time window in seconds.
-STATIC_RATE_LIMIT_MAX_REQUESTS=100 # Max requests per IP in window.
+STATIC_RATE_LIMIT_WINDOW=5
+STATIC_RATE_LIMIT_MAX_REQUESTS=100
 
 # --- User API ---
 USER_API_RATE_LIMIT_WINDOW=5
