docs: update rate limits in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -292,11 +292,11 @@ DISABLE_RATE_LIMITS=false
 
 # --- Static File Serving ---
 STATIC_RATE_LIMIT_WINDOW=5
-STATIC_RATE_LIMIT_MAX_REQUESTS=100
+STATIC_RATE_LIMIT_MAX_REQUESTS=75
 
 # --- User API ---
 USER_API_RATE_LIMIT_WINDOW=5
-USER_API_RATE_LIMIT_MAX_REQUESTS=10
+USER_API_RATE_LIMIT_MAX_REQUESTS=5
 
 # --- Stream API ---
 STREAM_API_RATE_LIMIT_WINDOW=5
@@ -304,19 +304,31 @@ STREAM_API_RATE_LIMIT_MAX_REQUESTS=10
 
 # --- Format API ---
 FORMAT_API_RATE_LIMIT_WINDOW=5
-FORMAT_API_RATE_LIMIT_MAX_REQUESTS=15
+FORMAT_API_RATE_LIMIT_MAX_REQUESTS=30
 
 # --- Catalog API ---
 CATALOG_API_RATE_LIMIT_WINDOW=5
 CATALOG_API_RATE_LIMIT_MAX_REQUESTS=5
 
 # --- Stremio Stream ---
-STREMIO_STREAM_RATE_LIMIT_WINDOW=5
+STREMIO_STREAM_RATE_LIMIT_WINDOW=15
 STREMIO_STREAM_RATE_LIMIT_MAX_REQUESTS=10
 
 # --- Stremio Catalog ---
 STREMIO_CATALOG_RATE_LIMIT_WINDOW=5
-STREMIO_CATALOG_RATE_LIMIT_MAX_REQUESTS=10
+STREMIO_CATALOG_RATE_LIMIT_MAX_REQUESTS=30
+
+# --- Stremio Manifest ---
+STREMIO_MANIFEST_RATE_LIMIT_WINDOW=5
+STREMIO_MANIFEST_RATE_LIMIT_MAX_REQUESTS=5
+
+# --- Stremio Subtitle ---
+STREMIO_SUBTITLE_RATE_LIMIT_WINDOW=5
+STREMIO_SUBTITLE_RATE_LIMIT_MAX_REQUESTS=10
+
+# --- Stremio Meta ---
+STREMIO_META_RATE_LIMIT_WINDOW=5
+STREMIO_META_RATE_LIMIT_MAX_REQUESTS=15
 
 
 # ==============================================================================
