feat: make caching more configurable and add to sample .env

--- a/.env.sample
+++ b/.env.sample
@@ -142,6 +142,29 @@ REGEX_FILTER_ACCESS=trusted
 # Users can then access the addon via /stremio/u/aliasName/manifest.json
 # ALIASED_CONFIGURATIONS=
 
+# ==============================================================================
+#                           CACHE CONFIGURATION
+# ==============================================================================
+
+# --- Default maximum cache size ----
+# The maximum number of items that can be held in a given cache instance, if not overriden by a specific cache instance
+DEFAULT_MAX_CACHE_SIZE=100000
+
+# --- Proxy IP TTL (StremThru/MediaFlow Proxy)
+# The Time-To-Live (in seconds) of items in the Public IP cache.
+# Set to -1 to disable caching
+PROXY_IP_CACHE_TTL=900
+
+# --- Addon Resource Caching ---
+# Control the Caching of resources fetched from other addons
+# Set to -1 to disable caching.
+MANIFEST_CACHE_TTL=300
+SUBTITLE_CACHE_TTL=300
+STREAM_CACHE_TTL=-1
+CATALOG_CACHE_TTL=300
+META_CACHE_TTL=300
+ADDON_CATALOG_CACHE_TTL=300
+
 
 # ==============================================================================
 #                             FEATURE CONTROL
