--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,7 @@
   "description": "Combine all your streams into one addon and display them with consistent formatting, sorting, and filtering.",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bytes": "^3.1.2",
     "dotenv": "^16.4.7",
     "envalid": "^8.0.0",
     "expr-eval": "^2.0.2",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bytes": "^3.1.5",
     "@types/node": "^20.14.10",
     "@types/pg": "^8.15.2"
   }
