feat: add sensible built-in limits and configurable limits, remove unused variables from Env

--- a/.env.sample
+++ b/.env.sample
@@ -166,6 +166,11 @@ META_CACHE_TTL=300
 ADDON_CATALOG_CACHE_TTL=300
 
 
+# --- RPDB API Key Validation Caching ---
+# Control how long a valid API key check is cached for 
+# Default: 7 days
+RPDB_API_KEY_VALIDITY_CACHE_TTL=604800
+
 # ==============================================================================
 #                             FEATURE CONTROL
 # ==============================================================================
@@ -293,8 +298,12 @@ DEFAULT_TIMEOUT=15000
 # --- Configuration Limits ---
 # Maximum number of addons allowed per AIOStreams configuration.
 MAX_ADDONS=15
+# Maximum number of groups allowed per AIOStreams configuration
+MAX_GROUPS=20
 # Maximum number of keyword filters per AIOStreams configuration.
 MAX_KEYWORD_FILTERS=30
+# Maximum number of condition filters per AIOStreams configuration
+MAX_CONDITION_FILTERS=30
 # Maximum timeout (ms) an addon can be set to via override.
 MAX_TIMEOUT=50000
 # Minimum timeout (ms) an addon can be set to via override.
