fix: make adjustments to how internal addon IDs are determined and fix some things

--- a/.env.sample
+++ b/.env.sample
@@ -221,6 +221,11 @@ LOG_FORMAT=text
 # Default: true
 LOG_SENSITIVE_INFO=true
 
+# --- Log Timezone ---
+# Adjust the timezone used for logging
+# e.g. Europe/Paris, America/New_York
+LOG_TIMEZONE=Etc/UTC
+
 
 # ==============================================================================
 #                  PROXY FOR OUTGOING ADDON REQUESTS (Torrentio, etc.)
