docs: update .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -282,7 +282,7 @@ DEFAULT_PROXY_ID=mediaflow
 # FORCE_PROXY_PROXIED_SERVICES=
 
 # --- Disable Proxied Addons Feature ---
-# If true, proxied addons (like MediaFlow itself) won't be added as an addon.
+# If true, it disables the 'Proxied Addons' option.
 FORCE_PROXY_DISABLE_PROXIED_ADDONS=false
 
 # --- Encrypt Streaming URLs ---
@@ -423,10 +423,17 @@ DEFAULT_JACKETTIO_STREMTHRU_URL=https://stremthru.13377001.xyz
 # --------- STREMTHRU-STORE ---------
 STREMTHRU_STORE_URL=https://stremthru.elfhosted.com/stremio/store/
 # DEFAULT_STREMTHRU_STORE_TIMEOUT=
-
+# Advanced: Override StremThru Store  hostname/port/protocol (similar to Comet).
+# FORCE_STREMTHRU_STORE_HOST=
+# FORCE_STREMTHRU_STORE_PORT=
+# FORCE_STREMTHRU_STORE_PROTOCOL=
 # --------- STREMTHRU-TORZ -----
 STREMTHRU_TORZ_URL=https://stremthru.elfhosted.com/stremio/torz/
 # DEFAULT_STREMTHRU_TORZ_TIMEOUT=
+# Advanced: Override StremThru Torz hostname/port/protocol (similar to Comet).
+# FORCE_STREMTHRU_TORZ_HOST=
+# FORCE_STREMTHRU_TORZ_PORT=
+# FORCE_STREMTHRU_TORZ_PROTOCOL=
 
 # --------- EASYNEWS+ ADDON ---------
 EASYNEWS_PLUS_URL=https://b89262c192b0-stremio-easynews-addon.baby-beamup.club/
@@ -519,6 +526,19 @@ RPDB_CATALOGS_URL=https://1fe84bc728af-rpdb.baby-beamup.club/
 # ------------- DMM Cast ----------------
 # DEFAULT_DMM_CAST_TIMEOUT=
 
-# -------------- STREMIO GDRIVE ----------------
-# DEFAULT_STREMIO_GDRIVE_TIMEOUT=
+# ----------- STREAMING CATALOGS ---------
+STREAMING_CATALOGS_URL=https://7a82163c306e-stremio-netflix-catalog-addon.baby-beamup.club
+# DEFAULT_STREAMING_CATALOGS_TIMEOUT=
+
+# ----------- ANIME CATALOGS -----------
+ANIME_CATALOGS_URL=https://1fe84bc728af-stremio-anime-catalogs.baby-beamup.club
+# DEFAULT_ANIME_CATALOGS_TIMEOUT=
+
+# ----------- DOCTOR WHO UNIVERSE -----------
+DOCTOR_WHO_UNIVERSE_URL=https://new-who.onrender.com
+# DEFAULT_DOCTOR_WHO_UNIVERSE_TIMEOUT=
+
+# ----------- WEBSTREAMR -----------
+WEBSTREAMR_URL=https://webstreamr.hayd.uk
+# DEFAULT_WEBSTREAMR_TIMEOUT=
 # ==============================================================================
