docs: use correct postgres scheme in example

--- a/.env.sample
+++ b/.env.sample
@@ -42,7 +42,7 @@ ADDON_PASSWORD=
 #   (You can change './data/db.sqlite' to your preferred path)
 #
 # PostgreSQL example:
-#   DATABASE_URI=postgresql://username:password@host:port/database_name
+#   DATABASE_URI=postgres://username:password@host:port/database_name
 #   (e.g., postgresql://postgres:password@localhost:5432/aiostreams)
 DATABASE_URI=sqlite://./data/db.sqlite
 
